refactor paginate done, TODO: mutate stock
